# graphiti-prototype

./: GEMINI_ADVANCED_RESEARCH_INSIGHTS.md  GEMINI_CODE_IMPLEMENTATION_GUIDE.md  GEMINI_DETAILED_IMPLEMENTATION_GUIDE.md  GEMINI_RESEARCH_CONFIRMATION.md  GRAPH_DATABASE_RESEARCH_FINDINGS.md  GRAPH_DATABASE_RESEARCH_PROMPT.md  HARD_RESET_INSTRUCTIONS.md  MCP_TOOLS_TEST_REPORT.md  hard-reset.ps1  test_all_14_tools.py  test_all_14_tools_simple.py
framework_design/: README.md  STATUS.md  STRUCTURE.md
framework_design/comparisons/: MODEL_COMPARISON_CATEGORY_A.md  README.md
framework_design/implementation/: IMPLEMENTATION_CHANGES_NEEDED.md  README.md
framework_design/research/: README.md
framework_design/research/findings/: README.md
framework_design/research/questions/: TDD_RESEARCH_QUESTIONS.md
framework_design/strategies/: README.md  TOOL_SELECTION_STRATEGY.md
framework_design/summaries/: README.md  RESEARCH_SESSION_SUMMARY.md
framework_design/templates/: QDRANT_DOCUMENT_TEMPLATE.md  README.md
graffiti_mcp_implementation/: .flake8  .gitignore  CONFIG_FIX.md  CONTEXT_FOR_NEW_CHAT.md  MCP_CONFIG_README.md  MCP_TOOLS_TEST_RESULTS.md  PROJECT_REQUIREMENTS.md  README.md  RESTART_SERVER.md  SETUP.md  TESTING_INFRASTRUCTURE_SUMMARY.md  TODO.md  TROUBLESHOOTING.md  docker-compose.README.md  docker-compose.yml  docker-control.ps1  main.py  mcp-config.example.json  mcp-config.json  mypy.ini  pyproject.toml  pytest.ini  regression_test_plan.md  test_server_connection.py
graffiti_mcp_implementation/documents/: QUICKSTART.md
graffiti_mcp_implementation/src/: __init__.py  __main__.py  config.py  database.py  embeddings.py  entities.py  mcp_server.py  mcp_tools.py  memory.py  relationships.py  search.py  validation.py
graffiti_mcp_implementation/tests/: __init__.py  conftest.py  run_regression_tests.py
graffiti_mcp_implementation/tests/integration/: test_add_memory.py  test_database_connection.py  test_database_initialization.py  test_entity_creation.py  test_entity_creation_function.py  test_entity_deletion.py  test_entity_labels.py  test_entity_retrieval.py  test_entity_update.py  test_hard_delete.py  test_initialization_implementation.py  test_mcp_tools.py  test_neo4j_connection.py  test_placeholder.py  test_relationship_creation.py  test_relationship_retrieval.py  test_semantic_search.py  test_soft_delete.py  test_update_memory.py
graffiti_mcp_implementation/tests/performance/: __init__.py  test_placeholder.py
graffiti_mcp_implementation/tests/unit/: __init__.py  test_entity_validation.py  test_memory_comparison.py  test_placeholder.py
graphiti_core/driver/: neo4j_driver.py
mcp_server/config/: config-docker-falkordb-combined.yaml  config-docker-neo4j.yaml
mcp_server/docker/: Dockerfile  Dockerfile.standalone  docker-compose-neo4j.yml
mcp_server/src/: graphiti_mcp_server.py
tests/driver/: test_neo4j_driver_error_handling.py
